public/src/scss/common.scss
/* ... */
.m10h { margin: 0 10px; }
.m20h { margin: 0 20px; }
.m5v { margin: 5px 0; }
.m20v { margin: 20px 0; }
.m10v { margin: 10px 0; }
.m50v { margin: 50px 0; }
.m10b { margin-bottom: 10px; }
.m10l { margin-left: 10px; }
.m20t { margin-top: 20px; }
.vm { vertical-align: middle; }
.pa {position: absolute;}
.pr {position: relative;}

.bgwhite {
  background-color: white;
}

.btn-group .btn+.btn, .btn-group .btn+.btn-group, .btn-group .btn-group+.btn, .btn-group .btn-group+.btn-group {
margin-left: 0;
}
thead {
  background-color: #F8F8F8;
}
.table {
  &.tbl-mt {
    margin-top: 25px;
  }
  .top-row {
    padding-top: 23px;
    border-top: none;
  }
  font-family: 'Lato', monospace;
}
.table-hover>tbody>tr:hover>td, .table-hover>tbody>tr:hover>th {
  background-color: #ededed;
}

// STYLES FOR NAVBAR

.navbar { 
  min-height: 80px; 
  &-default {
    background-color: #000;
    margin: 0;
    border: 0;
    padding-right: 60px;
    .navbar-toggle { 
      border-color: #fff;
      margin-top: 15px;
      &:hover, &:focus {
        background-color: #333;
      }
      .icon-bar { 
        background-color: #fff; 
      }
    }
    .navbar-nav {
      font-weight: 600;
      margin-left: 40px;
      margin-right: 60px;
      &>li>a {
        color: #FFF;
        font-family: 'Lato', sans-serif;
        padding: 30px 30px;
        &.nav-buttons {
          font-size: 26px;                
        }
        &:hover {
          background-color: $link-blue;
          color: $white
        }
      }
      &>.active {
        &>a {
          background-color: $background;
          color: $link-blue;                
          &:hover {
            background-color: $background;
            color: $link-blue;                
          }
          &:focus {
            background-color: $background;
            color: $link-blue;      
          }
        }
      }
    }
    .status {
      padding: 7px 15px;
      background-color: #181818;
      margin-top: 24px;
      color: #CECED2;
      height: 33px;
      border-radius: 5px;
      -moz-border-radius: 5px;
      -webkit-border-radius: 5px;
      .glyphicon-ok {
        color: $success;
      }
      .tooltip {
        margin: 0;
      }
    }
  }
}

.navbar-form {
  margin-top: 15px;
  .form-group {
    display: block;
  }
}

.navbar-brand-list {
  list-style: none;
  padding-left: 50px;
  .navbar-brand {
    padding: 0px 20px 0 0;
    margin-left: 0 !important;
    height: 0;
    line-height: 0;
    .svg-logo {
      height: 70px;
      width: 50px;
      background-image: url(/img/hx-logo.svg);
      background-size: 40px;
      background-position: center;
      background-repeat: no-repeat;
      display: inline-block;
    }
    .svg-logo-testnet {
      height: 70px;
      width: 50px;
      background-image: url(/img/hx-logo-testnet.svg);
      background-size: 40px;
      background-position: center;
      background-repeat: no-repeat;
      display: inline-block;
    }
  }
}

.navbar-form {
  margin-top: 23.5px;
  width: 34%;
  padding: 0;
  padding-left: 15px;
  .form-control {
    border-left: 0;
    box-shadow: none;
    padding: 0;
    text-align: left;
    font-size: 1.73rem;
    color: #5a6d81;
    height: 33px;
    border-radius: 0;
    border-color: transparent;
  }
}

.nav-tabs.nav-justified>li>a:hover {
  cursor: pointer;
}

.form-group {
  width: 500px;
  max-width: 100%;
}

.gradient {
  background: linear-gradient(to right, #F9FBFC 0%, #F9FBFC 60%, #F4F7F9 50%, #F4F7F9 100%);
}

.m-container {
  background-color: #ffffff;
  border-radius: 10px;
  padding: 28px 42px;
  margin: 30px 0 0;
  &.tx {
    padding: 30px;
  }
}

.tx-data {
  margin: 0 30px 0px 20px;
}

.block-dp {
  margin: 0 30px;
  .dp-arrow {
    padding: 0 25px;
  }
  .datepicker-text {
    color: $link-blue;
    font-weight: 900;
  }
}

.layout .col-md-12 {
  background-color: #fff;
}
.col-md-12 .column-top-half {
  background-color: #fff;
  padding-bottom: 25px;
}
.col-md-12  .btn-default {
  margin: auto;
  display: block;
  position: relative;
  z-index: 1;
  background-color: #fff;
  border-radius: 5px;
  color: #578FFD;
  padding: 9px 36px;
  border-color: transparent;

  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
}
.col-md-12 .btn-default:hover{background-color: #f4f7f9;}
.col-md-12 .btn-default:focus{background-color: #e9f8fe;}
.col-md-12 hr {
  margin-top: -16px;
}

.layout.col-md-7, .layout.col-md-4 {
  padding: 80px 0 0 0;
}
.layout .col-md-7 {
  background-color: #fff;
}
.col-md-7 .column-top-half {
  background-color: #fff;
  padding-bottom: 25px;
}
.col-md-7  .btn-default {
  margin: auto;
  display: block;
  position: relative;
  z-index: 1;
  background-color: #fff;
  border-radius: 5px;
  color: #578FFD;
  padding: 9px 36px;
  border-color: transparent;

  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
}
.col-md-7 .btn-default:hover{background-color: #f4f7f9;}
.col-md-7 .btn-default:focus{background-color: #e9f8fe;}
.col-md-7 hr {
  margin-top: -16px;
}
.left {
  float: left;
}
.right {
  float: right;
}
.col-md-7.column-lower-half {
  padding-top: 30px;
}
.insight {
  font-family: 'Lato', sans-serif;
  font-size: 60px;
  font-style: italic;
  font-weight: 700;
  overflow: hidden;
  padding-top: 3px;
}

.input-group {
  width: 100%;
}
.input-group-addon {
  background-color: #181818;
  width: 35px;
  padding: 0 5px;
  border-radius: 0;
  border-color: transparent;
}
.svg-search {
  height: 21px;
  width: 21px;
  background-image: url('/img/search.svg');
  background-size: 21px;
  background-repeat: no-repeat;
  margin-top: 5px;
  display: inline-block;
}

#search.loading {
  background-image: url('/img/loading.gif');
  background-position: 5px center;
  background-repeat: no-repeat;
  padding-left: 25px;
}

.loader-gif {
  display: inline-block;
  width: 16px;
  height: 11px;
  background: transparent url(../img/loading.gif) no-repeat;
  margin-left: 5px;
}

#search {
  background-color: #181818;
  color: #ffffff;
}
/* ... */

